--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,75 +3,85 @@
 
 /** Ionic CSS Variables **/
 :root {
-  /** primary **/
-  --ion-color-primary: #3880ff;
-  --ion-color-primary-rgb: 56, 128, 255;
-  --ion-color-primary-contrast: #ffffff;
-  --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
+  --ion-font-family: 'DinoFont';
 
-  /** secondary **/
-  --ion-color-secondary: #0cd1e8;
-  --ion-color-secondary-rgb: 12, 209, 232;
-  --ion-color-secondary-contrast: #ffffff;
-  --ion-color-secondary-contrast-rgb: 255, 255, 255;
-  --ion-color-secondary-shade: #0bb8cc;
-  --ion-color-secondary-tint: #24d6ea;
+   /** primary **/
+   --ion-color-primary: #303F9F;
+   --ion-color-primary-rgb: 48,63,159;
+   --ion-color-primary-contrast: #ffffff;
+   --ion-color-primary-contrast-rgb: 255,255,255;
+   --ion-color-primary-shade: #2a378c;
+   --ion-color-primary-tint: #4552a9;
+ 
+   /** secondary **/
+   --ion-color-secondary: #3F51B5;
+   --ion-color-secondary-rgb: 63,81,181;
+   --ion-color-secondary-contrast: #ffffff;
+   --ion-color-secondary-contrast-rgb: 255,255,255;
+   --ion-color-secondary-shade: #37479f;
+   --ion-color-secondary-tint: #5262bc;
+ 
+   /** tertiary **/
+   --ion-color-tertiary: #E91E63;
+   --ion-color-tertiary-rgb: 233,30,99;
+   --ion-color-tertiary-contrast: #ffffff;
+   --ion-color-tertiary-contrast-rgb: 255,255,255;
+   --ion-color-tertiary-shade: #cd1a57;
+   --ion-color-tertiary-tint: #eb3573;
+ 
+   /** success **/
+   --ion-color-success: #388E3C;
+   --ion-color-success-rgb: 56,142,60;
+   --ion-color-success-contrast: #ffffff;
+   --ion-color-success-contrast-rgb: 255,255,255;
+   --ion-color-success-shade: #317d35;
+   --ion-color-success-tint: #4c9950;
+ 
+   /** warning **/
+   --ion-color-warning: #FFC107;
+   --ion-color-warning-rgb: 255,193,7;
+   --ion-color-warning-contrast: #000000;
+   --ion-color-warning-contrast-rgb: 0,0,0;
+   --ion-color-warning-shade: #e0aa06;
+   --ion-color-warning-tint: #ffc720;
+ 
+   /** danger **/
+   --ion-color-danger: #F44336;
+   --ion-color-danger-rgb: 244,67,54;
+   --ion-color-danger-contrast: #ffffff;
+   --ion-color-danger-contrast-rgb: 255,255,255;
+   --ion-color-danger-shade: #d73b30;
+   --ion-color-danger-tint: #f5564a;
+ 
+   /** dark **/
+    --ion-color-dark: #212121;
+   --ion-color-dark-rgb: 33,33,33;
+   --ion-color-dark-contrast: #ffffff;
+   --ion-color-dark-contrast-rgb: 255,255,255;
+   --ion-color-dark-shade: #1d1d1d;
+   --ion-color-dark-tint: #373737;
+ 
+   /** medium **/
+   --ion-color-medium: #757575;
+   --ion-color-medium-rgb: 117,117,117;
+   --ion-color-medium-contrast: #ffffff;
+   --ion-color-medium-contrast-rgb: 255,255,255;
+   --ion-color-medium-shade: #676767;
+   --ion-color-medium-tint: #838383;
+ 
+ 
+   /** light **/
+   --ion-color-light: #f4f5f8;
+   --ion-color-light-rgb: 244,244,244;
+   --ion-color-light-contrast: #000000;
+   --ion-color-light-contrast-rgb: 0,0,0;
+   --ion-color-light-shade: #d7d8da;
+   --ion-color-light-tint: #f5f6f9;
+}
 
-  /** tertiary **/
-  --ion-color-tertiary: #7044ff;
-  --ion-color-tertiary-rgb: 112, 68, 255;
-  --ion-color-tertiary-contrast: #ffffff;
-  --ion-color-tertiary-contrast-rgb: 255, 255, 255;
-  --ion-color-tertiary-shade: #633ce0;
-  --ion-color-tertiary-tint: #7e57ff;
-
-  /** success **/
-  --ion-color-success: #10dc60;
-  --ion-color-success-rgb: 16, 220, 96;
-  --ion-color-success-contrast: #ffffff;
-  --ion-color-success-contrast-rgb: 255, 255, 255;
-  --ion-color-success-shade: #0ec254;
-  --ion-color-success-tint: #28e070;
-
-  /** warning **/
-  --ion-color-warning: #ffce00;
-  --ion-color-warning-rgb: 255, 206, 0;
-  --ion-color-warning-contrast: #ffffff;
-  --ion-color-warning-contrast-rgb: 255, 255, 255;
-  --ion-color-warning-shade: #e0b500;
-  --ion-color-warning-tint: #ffd31a;
-
-  /** danger **/
-  --ion-color-danger: #f04141;
-  --ion-color-danger-rgb: 245, 61, 61;
-  --ion-color-danger-contrast: #ffffff;
-  --ion-color-danger-contrast-rgb: 255, 255, 255;
-  --ion-color-danger-shade: #d33939;
-  --ion-color-danger-tint: #f25454;
-
-  /** dark **/
-  --ion-color-dark: #222428;
-  --ion-color-dark-rgb: 34, 34, 34;
-  --ion-color-dark-contrast: #ffffff;
-  --ion-color-dark-contrast-rgb: 255, 255, 255;
-  --ion-color-dark-shade: #1e2023;
-  --ion-color-dark-tint: #383a3e;
-
-  /** medium **/
-  --ion-color-medium: #989aa2;
-  --ion-color-medium-rgb: 152, 154, 162;
-  --ion-color-medium-contrast: #ffffff;
-  --ion-color-medium-contrast-rgb: 255, 255, 255;
-  --ion-color-medium-shade: #86888f;
-  --ion-color-medium-tint: #a2a4ab;
-
-  /** light **/
-  --ion-color-light: #f4f5f8;
-  --ion-color-light-rgb: 244, 244, 244;
-  --ion-color-light-contrast: #000000;
-  --ion-color-light-contrast-rgb: 0, 0, 0;
-  --ion-color-light-shade: #d7d8da;
-  --ion-color-light-tint: #f5f6f9;
+@font-face {
+  font-family: 'DinoFont';
+  font-style: normal;
+  font-weight: normal;
+  src: url('../assets/fonts/PFDinMono.ttf');
 }
