add bootstrap utilities via cdn

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,5 +7,6 @@
   </ion-toolbar>
 </ion-header>
 <ion-content padding>
- My home content
+ <pre> home content </pre>
+ <ion-progress-bar type="indeterminate" color="tertiary" class="mt-5"></ion-progress-bar>
 </ion-content>
