--- a/src/app/first-with-tabs/first-with-tabs.page.html
+++ b/src/app/first-with-tabs/first-with-tabs.page.html
@@ -1,9 +1,12 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>first-with-tabs</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-
-</ion-content>
+<ion-tabs>
+    <ion-tab-bar slot="bottom">
+      <ion-tab-button tab="tab1">
+        <ion-icon name="sunny"></ion-icon>
+        <ion-label>Tab 1</ion-label>
+      </ion-tab-button>
+      <ion-tab-button tab="tab2">
+        <ion-icon name="moon"></ion-icon>
+        <ion-label>Tab 2</ion-label>
+      </ion-tab-button>
+    </ion-tab-bar>
+  </ion-tabs>
