--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,9 +1,12 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>tab2</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-
-</ion-content>
+    <ion-toolbar color="primary">
+      <ion-buttons slot="start">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+      <ion-title>Tab 2</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content padding>
+    My second tab content
+    <!-- <pre>{{rockets | json }}</pre> -->
+  </ion-content>
