--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,10 +7,22 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <app-skeleton *ngIf="!observableRockets"></app-skeleton>
+
+  <!-- <app-skeleton *ngIf="!observableRockets"></app-skeleton>
   <ion-list>
-    <ion-item *ngFor="let r of observableRockets | async" [ngClass]="{'active': r.active, 'inactive': !r.active}" class="ion-activatable"
-      (click)="buttonClick(r.id)">
+    <ion-item *ngFor="let r of observableRockets | async" [ngClass]="{'active': r.active, 'inactive': !r.active}"
+      class="ion-activatable" (click)="buttonClick(r.id)">
+      <ion-ripple-effect></ion-ripple-effect>
+      <ion-label>
+        {{ r.rocket_name }}
+      </ion-label>
+    </ion-item>
+  </ion-list> -->
+
+  <app-skeleton *ngIf="!rockets"></app-skeleton>
+  <ion-list>
+    <ion-item *ngFor="let r of rockets" [ngClass]="{'active': r.active, 'inactive': !r.active}"
+      class="ion-activatable" (click)="buttonClick(r.id)">
       <ion-ripple-effect></ion-ripple-effect>
       <ion-label>
         {{ r.rocket_name }}
@@ -82,4 +94,5 @@
     </ion-item-sliding>
 
   </ion-item-group>
+
 </ion-content>
