--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -27,6 +27,6 @@
     </ion-content>
   </ion-menu>
   <ion-router-outlet id="content" main>
-    <ng-progress [color]="'#E91E63'" [spinner]="true"></ng-progress>
+    <ng-progress [color]="'#FFC107'" [thick]="true" [spinner]="true"></ng-progress>
   </ion-router-outlet>
 </ion-split-pane>
