--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <ion-app>
+    <ng-progress [color]="'#FFC107'" [thick]="true" [spinner]="true"></ng-progress>
   <ion-router-outlet></ion-router-outlet>
 </ion-app>
