--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -5,6 +5,9 @@
 :root {
   --ion-font-family: 'DinoFont';
 
+  // ion-content{
+  //   --ion-background-color:#303030
+  // }
    /** primary **/
    --ion-color-primary: #303F9F;
    --ion-color-primary-rgb: 48,63,159;
