--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -23,8 +23,7 @@
   <app-skeleton *ngIf="!rockets"></app-skeleton>
   <div [@fadeIn] *ngIf="rockets">
     <ion-list padding>
-      <ion-item *ngFor="let r of rockets"
-        class="ion-activatable" (click)="buttonClick(r.id)">
+      <ion-item *ngFor="let r of rockets" class="ion-activatable" (click)="buttonClick(r.id)">
         <ion-ripple-effect></ion-ripple-effect>
         <ion-label>
           {{ r.rocket_name }}
@@ -40,14 +39,14 @@
 
     <ion-item-sliding>
       <ion-item-options side="start">
-        <ion-item-option (click)="favorite(item)">Favorite</ion-item-option>
-        <ion-item-option color="danger" (click)="share(item)">Share</ion-item-option>
+        <ion-item-option>Favorite</ion-item-option>
+        <ion-item-option color="danger">Share</ion-item-option>
       </ion-item-options>
       <ion-item>
         <ion-label>Item Options</ion-label>
       </ion-item>
       <ion-item-options side="end">
-        <ion-item-option (click)="unread(item)">Unread</ion-item-option>
+        <ion-item-option>Unread</ion-item-option>
       </ion-item-options>
     </ion-item-sliding>
 
