--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -8,7 +8,7 @@
     <ion-content>
       <ion-list>
         <ion-menu-toggle auto-hide="false" *ngFor="let p of pages">
-          <ion-item [routerLink]="p.url" routerDirection="root" [class.active-item]="selectedPath.startsWith(p.url)">
+          <ion-item *ngIf="p.activated" [routerLink]="p.url" routerDirection="root" [class.active-item]="selectedPath.startsWith(p.url)">
             <ion-label>
               <ion-icon name="quote" slot="start"></ion-icon>
               {{ p.title }}
