--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,6 +4,14 @@
 /** Ionic CSS Variables **/
 :root {
   --ion-font-family: 'DinoFont';
+  
+  // --ion-background-color: #303030;
+  // --ion-text-color: #ffffff;
+  // pre {
+  //   color: #ffffff;
+  //   font-family: 'DinoFont';
+  //   font-size: 80%;
+  //  }
 
    /** primary **/
    --ion-color-primary: #303F9F;
