--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -5,13 +5,13 @@
 :root {
   --ion-font-family: 'DinoFont';
   
-  // --ion-background-color: #303030;
-  // --ion-text-color: #ffffff;
-  // pre {
-  //   color: #ffffff;
-  //   font-family: 'DinoFont';
-  //   font-size: 80%;
-  //  }
+  --ion-background-color: #303030;
+  --ion-text-color: #ffffff;
+  pre {
+    color: #ffffff;
+    font-family: 'DinoFont';
+    font-size: 80%;
+   }
 
   // ion-content{
   //   --ion-background-color:#303030
