--- a/src/app/first-with-tabs/first-with-tabs.page.html
+++ b/src/app/first-with-tabs/first-with-tabs.page.html
@@ -2,11 +2,11 @@
     <ion-tab-bar slot="bottom">
       <ion-tab-button tab="tab1">
         <ion-icon name="sunny"></ion-icon>
-        <ion-label>Tab 1</ion-label>
+        <ion-label>Rockets + Samples</ion-label>
       </ion-tab-button>
       <ion-tab-button tab="tab2">
         <ion-icon name="moon"></ion-icon>
-        <ion-label>Tab 2</ion-label>
+        <ion-label>Launches</ion-label>
       </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
