--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -8,17 +8,24 @@
     <ion-content>
       <ion-list>
         <ion-menu-toggle auto-hide="false" *ngFor="let p of pages">
-          <ion-item *ngIf="p.activated" [routerLink]="p.url" routerDirection="root" [class.active-item]="selectedPath.startsWith(p.url)">
+          <ion-item *ngIf="p.activated" [routerLink]="p.url" routerDirection="root"
+            [class.active-item]="selectedPath.startsWith(p.url)">
             <ion-label>
               <ion-icon name="quote" slot="start"></ion-icon>
               {{ p.title }}
             </ion-label>
           </ion-item>
         </ion-menu-toggle>
+      </ion-list>
 
+      <ion-list class="fixed-bottom">
         <ion-item tappable routerLink="/login" routerDirection="root">
           <ion-icon name="close" slot="start"></ion-icon>
           Logout
+        </ion-item>
+        <ion-item tappable>
+          <ion-icon name="settings" slot="start"></ion-icon>
+          settings
         </ion-item>
       </ion-list>
     </ion-content>
