--- a/src/app/components/skeleton/skeleton.component.html
+++ b/src/app/components/skeleton/skeleton.component.html
@@ -1,6 +1,6 @@
 <div class="ion-padding custom-skeleton">
   <ion-skeleton-text animated style="width: 60%"></ion-skeleton-text>
-  <ion-skeleton-text animated></ion-skeleton-text>
+  <!-- <ion-skeleton-text animated></ion-skeleton-text> -->
   <ion-skeleton-text animated style="width: 80%"></ion-skeleton-text>
   <ion-skeleton-text animated style="width: 80%"></ion-skeleton-text>
   <ion-skeleton-text animated style="width: 80%"></ion-skeleton-text>
@@ -26,7 +26,7 @@
       </p>
     </ion-label>
   </ion-item> -->
-  <ion-item *ngFor="let dummy of ' '.repeat(10).split(''), let x = index">
+  <ion-item *ngFor="let dummy of ' '.repeat(20).split(''), let x = index">
     <ion-thumbnail slot="start">
       <ion-skeleton-text animated></ion-skeleton-text>
     </ion-thumbnail>
