--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -5,9 +5,8 @@
 :root {
   --ion-font-family: 'Roboto';
   font-size: 80%;
-
-  // --ion-background-color: #303030;
-  // --ion-text-color: #ffffff;
+  --ion-background-color: #303030;
+  --ion-text-color: #ffffff;
   pre {
     // color: #ffffff;
     font-family: 'DinoFont';
