--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -4,3 +4,7 @@
 // styles are for the entire app and not just one component. Additionally, this 
 // file can hold Sass mixins, functions, and placeholder classes to be imported 
 // and used throughout the application.
+
+.active-menu-item {
+    border-left: 6px solid var(--ion-color-primary);
+}
