--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -1,7 +1,8 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
+      <ion-back-button [defaultHref]="defaultBackLink"></ion-back-button>
     </ion-buttons>
     <ion-title>
       List
