add launches module mockup

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -26,5 +26,5 @@
       </p>
     </ion-card-content>
   </ion-card>
-  <app-skeleton-loader [size]=2></app-skeleton-loader>
+  <app-skeleton-loader [items]=2></app-skeleton-loader>
 </ion-content>
