--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <ion-app>
+  <ng-progress></ng-progress>
   <!-- when=false -->
   <ion-split-pane>
     <ion-menu type="overlay">
@@ -9,23 +10,23 @@
       </ion-header>
       <ion-content>
         <div *ngIf="false">
-            <ion-card>
-                <ion-card-header>
-                  <ion-card-subtitle>
-                    <ion-skeleton-text style="width: 5%"></ion-skeleton-text>
-                  </ion-card-subtitle>
-                  <ion-card-title>
-                    <ion-skeleton-text style="width: 20%"></ion-skeleton-text>
-                  </ion-card-title>
-                </ion-card-header>
-                <ion-card-content>
-                  <p>
-                    <ion-skeleton-text></ion-skeleton-text>
-                    <ion-skeleton-text></ion-skeleton-text>
-                    <ion-skeleton-text></ion-skeleton-text>
-                  </p>
-                </ion-card-content>
-              </ion-card>
+          <ion-card>
+            <ion-card-header>
+              <ion-card-subtitle>
+                <ion-skeleton-text style="width: 5%"></ion-skeleton-text>
+              </ion-card-subtitle>
+              <ion-card-title>
+                <ion-skeleton-text style="width: 20%"></ion-skeleton-text>
+              </ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              <p>
+                <ion-skeleton-text></ion-skeleton-text>
+                <ion-skeleton-text></ion-skeleton-text>
+                <ion-skeleton-text></ion-skeleton-text>
+              </p>
+            </ion-card-content>
+          </ion-card>
         </div>
         <ion-list>
           <ion-menu-toggle auto-hide="false" *ngFor="let p of pages">
