playing with ng-template

--- a/src/app/launches/pages/past/past.page.html
+++ b/src/app/launches/pages/past/past.page.html
@@ -3,7 +3,10 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Past launches</ion-title>
+    <ion-title>
+      Past launches
+      <ion-badge *ngIf="pastLaunches$ | async as launches" color="tertiary">{{launches.length}}</ion-badge>
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -21,30 +24,50 @@
           </ion-thumbnail>
           <ion-label class="d-inline">
             <h2>{{l.mission_name}}</h2>
+            <p> {{l.launch_date_utc | date : 'medium'}} UTC</p>
             <p>{{l.launch_site.site_name}}</p>
             <p>{{l.rocket.rocket_name}}</p>
           </ion-label>
-          <ion-note slot="end">
-            <!-- <div class="d-flex flex-column">
-              {{l.launch_date_utc | date : 'short'}}
-            </div> -->
+          <ion-note slot="end" class="d-none d-md-block">
+            <ion-row *ngIf="l.launch_success else launch_failed">
+              <ion-col>
+                <ion-button disabled="true" color="success" expand="block" fill="outline" size="small">succeeded
+                </ion-button>
+              </ion-col>
+              <ion-col>
+                <ion-button disabled="true" color="dark" expand="block" fill="outline" size="small">
+                  {{l.rocket.second_stage.payloads[0].orbit}}</ion-button>
+              </ion-col>
+            </ion-row>
             <ion-row>
-                <ion-col>
-                  ion-col
-                </ion-col>
-                <ion-col>
-                  ion-col
-                </ion-col>
-                <ion-col>
-                  ion-col
-                </ion-col>
-                <ion-col>
-                  ion-col
-                </ion-col>
-              </ion-row>
+              <ion-col *ngFor="let core of l.rocket.first_stage.cores">
+                <ng-container *ngIf="core.landing_intent && core.landing_vehicle">
+                  <ng-container [ngTemplateOutlet]="core.land_success ? land_succeeded : land_failed"
+                    [ngTemplateOutletContext]="{core : core}">
+
+                  </ng-container>
+                </ng-container>
+              </ion-col>
+            </ion-row>
           </ion-note>
         </ion-item>
       </ion-item-sliding>
     </ion-list>
   </ng-container>
 </ion-content>
+
+<ng-template #launch_failed>
+  <ng-container>
+    <ion-button disabled="true" color="danger" expand="block" fill="outline" size="small">failed</ion-button>
+  </ng-container>
+</ng-template>
+
+<ng-template #land_succeeded let-core="core">
+  <ion-button disabled="true" color="success" expand="block" fill="outline" size="small">
+    {{core.landing_vehicle}}</ion-button>
+</ng-template>
+
+<ng-template #land_failed let-core="core">
+  <ion-button disabled="true" color="danger" expand="block" fill="outline" size="small">
+    {{core.landing_vehicle}}</ion-button>
+</ng-template>
