--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,6 +1,8 @@
 /** Ionic CSS Variables **/
 :root {
-  --ion-font-family: 'Roboto';
+  --ion-font-family: 'DinoFont';
+  // --ion-background-color: #303030;
+  // --ion-text-color: #ffffff;
    /** primary **/
    --ion-color-primary: #303F9F;
    --ion-color-primary-rgb: 48,63,159;
@@ -73,4 +75,12 @@
    --ion-color-light-contrast-rgb: 0,0,0;
    --ion-color-light-shade: #d7d8da;
    --ion-color-light-tint: #f5f6f9;
+}
+
+@font-face {
+  font-family: 'DinoFont';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 9px;
+  src: url('../assets/fonts/PFDinMono.ttf');
 }
