--- a/src/app/launches/pages/next/next.page.html
+++ b/src/app/launches/pages/next/next.page.html
@@ -8,10 +8,8 @@
 </ion-header>
 
 <ion-content>
-  <ng-container *ngIf="nextLaunch$ | async as launch; else loading">
-
-    <ion-card button [routerLink]="['/launches', launch.flight_number]"
-      routerDirection="forward">
+  <ng-container *ngIf="nextLaunch$ | async as launch; else lottie_loader">
+    <ion-card button [routerLink]="['/launches', launch.flight_number]" routerDirection="forward">
       <ion-card-header>
         <ion-card-subtitle>{{launch.launch_date_utc | date:'fullDate'}}</ion-card-subtitle>
         <ion-card-title>{{launch.mission_name}}</ion-card-title>
@@ -19,6 +17,14 @@
       </ion-card-header>
       <ion-card-content>
         <p>{{launch.details}}</p>
+        <ion-row class="pt-3 d-flex flex-row-reverse">
+          <ion-button
+            *ngIf="launch.rocket.first_stage.cores[0].landing_intent && launch.rocket.first_stage.cores[0].landing_vehicle"
+            disabled="true" color="dark" expand="block" fill="outline" size="small">
+            {{launch.rocket.first_stage.cores[0].landing_vehicle}}</ion-button>
+          <ion-button disabled="true" color="dark" expand="block" fill="outline" size="small">
+            {{launch.rocket.second_stage.payloads[0].orbit}}</ion-button>
+        </ion-row>
       </ion-card-content>
     </ion-card>
   </ng-container>
@@ -46,4 +52,8 @@
       </p>
     </ion-card-content>
   </ion-card>
+</ng-template>
+
+<ng-template #lottie_loader>
+  <app-lottie-loader></app-lottie-loader>
 </ng-template>
