--- a/src/app/launches/pages/launches.page.html
+++ b/src/app/launches/pages/launches.page.html
@@ -2,17 +2,17 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="next">
-      <ion-icon name="logo-npm"></ion-icon>
+      <ion-icon name="alarm"></ion-icon>
       <ion-label>NEXT</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="past">
-      <ion-icon name="logo-nodejs"></ion-icon>
+      <ion-icon name="arrow-back"></ion-icon>
       <ion-label>PAST</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="upcoming">
-      <ion-icon name="logo-github"></ion-icon>
+      <ion-icon name="arrow-forward"></ion-icon>
       <ion-label>UPCOMING</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
