--- a/src/app/core/pages/about/about.page.html
+++ b/src/app/core/pages/about/about.page.html
@@ -16,20 +16,38 @@
         API Info
       </ion-label>
     </ion-item-divider>
-    <ion-button class="ml-3 mt-2 mb-2" href="https://api.spacexdata.com/v3">
-      https://api.spacexdata.com/v3
-      <ion-icon class="pl-3" name="arrow-forward"></ion-icon>
-    </ion-button>
-
+    <ion-item lines="none">
+      <ion-button class="ml-3 mt-2 mb-2" href="https://api.spacexdata.com/v3">
+        https://api.spacexdata.com/v3
+        <ion-icon class="pl-3" name="arrow-forward"></ion-icon>
+      </ion-button>
+      <ion-note slot="end" class="d-none d-md-block">
+        <ion-row class="m-2 bd-highlight">
+          <ion-badge color="warning">/v3</ion-badge>
+        </ion-row>
+        <ion-row class="m-2">
+          <ion-badge color="warning">API Info</ion-badge>
+        </ion-row>
+      </ion-note>
+    </ion-item>
     <ion-item-divider color="dark" sticky="true">
       <ion-label>
         Company Info
       </ion-label>
     </ion-item-divider>
-    <ion-button class="ml-3 mt-2 mb-2" href="https://api.spacexdata.com/v3/info">
-      https://api.spacexdata.com/v3/info
-      <ion-icon class="pl-3" name="arrow-forward"></ion-icon>
-    </ion-button>
-
+    <ion-item lines="none">
+      <ion-button class="ml-3 mt-2 mb-2" href=" https://api.spacexdata.com/v3/info">
+        https://api.spacexdata.com/v3/info
+        <ion-icon class="pl-3" name="arrow-forward"></ion-icon>
+      </ion-button>
+      <ion-note slot="end" class="d-none d-md-block">
+        <ion-row class="m-2">
+          <ion-badge color="warning">/v3/info</ion-badge>
+        </ion-row>
+        <ion-row class="m-2">
+          <ion-badge color="warning">Company Info</ion-badge>
+        </ion-row>
+      </ion-note>
+    </ion-item>
   </div>
 </ion-content>
