--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,6 +1,6 @@
 /** Ionic CSS Variables **/
 :root {
-  --ion-font-family: 'DinoFont';
+  --ion-font-family: 'Roboto';
   // --ion-background-color: #303030;
   // --ion-text-color: #ffffff;
    /** primary **/
