--- a/src/app/core/pages/about/about.page.html
+++ b/src/app/core/pages/about/about.page.html
@@ -11,41 +11,41 @@
 
 <ion-content>
   <div>
-    <ion-item-divider color="dark" sticky="true">
+    <ion-item-divider color="warning" sticky="true">
       <ion-label>
         API Info
       </ion-label>
     </ion-item-divider>
     <ion-item lines="none">
-      <ion-button class="ml-3 mt-2 mb-2" href="https://api.spacexdata.com/v3">
+      <ion-button class="ml-3 mt-2 mb-2"(click)="openLink('https://api.spacexdata.com/v3/')>
         https://api.spacexdata.com/v3
         <ion-icon class="pl-3" name="arrow-forward"></ion-icon>
       </ion-button>
       <ion-note slot="end" class="d-none d-md-block">
         <ion-row class="m-2 bd-highlight">
-          <ion-badge color="warning">/v3</ion-badge>
+          <ion-badge color="success">/v3</ion-badge>
         </ion-row>
         <ion-row class="m-2">
-          <ion-badge color="warning">API Info</ion-badge>
+          <ion-badge color="success">API Info</ion-badge>
         </ion-row>
       </ion-note>
     </ion-item>
-    <ion-item-divider color="dark" sticky="true">
+    <ion-item-divider color="warning" sticky="true">
       <ion-label>
         Company Info
       </ion-label>
     </ion-item-divider>
     <ion-item lines="none">
-      <ion-button class="ml-3 mt-2 mb-2" href=" https://api.spacexdata.com/v3/info">
+      <ion-button class="ml-3 mt-2 mb-2" (click)="openLink('https://api.spacexdata.com/v3/info')">
         https://api.spacexdata.com/v3/info
         <ion-icon class="pl-3" name="arrow-forward"></ion-icon>
       </ion-button>
       <ion-note slot="end" class="d-none d-md-block">
         <ion-row class="m-2">
-          <ion-badge color="warning">/v3/info</ion-badge>
+          <ion-badge color="success">/v3/info</ion-badge>
         </ion-row>
         <ion-row class="m-2">
-          <ion-badge color="warning">Company Info</ion-badge>
+          <ion-badge color="success">Company Info</ion-badge>
         </ion-row>
       </ion-note>
     </ion-item>
